ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/07_void_return_value.lava
void bar() {
    return 5;
}
